...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/loginLayout">

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
...
            android:paddingRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/holo_green_dark" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
...
